# FlappyBirdSimple

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
FlappyBirdSimple/: CMakeLists.txt
FlappyBirdSimple/resources/: fragmentshader.glsl  vertexshader.glsl
FlappyBirdSimple/resources/Assets/shaders/: ColorFragmentShader.glsl  TextureFragmentShader.glsl  TextureVertexShader.glsl
FlappyBirdSimple/source/: Application.cpp  Application.h  GameScene.cpp  GameScene.h  Main.cpp  PCH.h  ResourceManager.cpp  ResourceManager.h  SpriteRenderer.h  SpriterRenderer.cpp  Timer.cpp  Timer.h  Window.cpp  Window.h
FlappyBirdSimple/source/renderer/: ImGui.cpp  ImGui.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
